# tblib

./: --Makefile  .gitignore  CMakeLists.txt  CMakeSettings.json  NatvisFile.natvis  README.md  ReadMe.txt  tb_basetypes.h  tb_exception_base.h  tblib.sln  tblib.todolist.txt  tblib.vcxproj  tblib.vcxproj.filters
com/: communication_base.cpp  communication_base.h  hide_communication_base.h
conf/: conf_based.cpp  conf_variant.cpp  conf_variant.h  json_parser.cpp  json_parser.h  json_validator.cpp  tb_parsecmdl.cpp  tb_parsecmdl.h  tbcfg_parse.cpp  tbcfg_parse.h  tbconf.cpp  tbconf.h
gdata/: hash_functions.cpp  hash_functions.h  t_array.cpp  t_array.h  t_error.h  t_format.h  t_serialize.cpp  t_sstream.h  t_sstruct.h  t_str_utils.cpp  t_string.cpp  t_string.h  t_tools.h  tb.convert.simplet.cpp  tb_algo.h  tb_basedtools.h  tb_binmap.cpp  tb_binmap.h  tb_buffer.h  tb_c_tools.cpp  tb_c_tools.h  tb_env.cpp  tb_env.h  tb_map.h  tb_numbers.h  tb_parsing.h  tb_serialize.h  tb_string.cpp  tb_vector_cs.h  tbt_locale.cpp  tbt_locale.h  tbt_locale_os.cpp  tbt_utils.cpp  w-metadata.h
parse/: t_parse.cpp  t_parse.h  t_path.h  tb_dfa.cpp  tb_dfa.h
projects/: tblib.vcxproj  tblib.vcxproj.filters
tbsync/: sync.cpp  sync.h
tools/: makeunicode.ps1
tsys/: cross_sys.cpp  cross_sys.h  precompiled.cpp  precompiled.h  sys_mutex.h  sys_resource.h  systime.cpp  systime.h  t_basedsync.h  tb_log.h  tb_net.cpp  tb_net.h  tb_process.cpp  tb_process.h  tb_service.cpp  tb_service.h  tb_ssockets.cpp  tb_ssockets.h  tb_sysdecls.h  tb_sysfun.h  tbfiles.cpp  tbfiles.h  tblog.cpp  tsys_helper.h
(+82 files in other folders)
